ICE-10798 fix for returning focus to table body after pressing PgDn, PgUp, Home, and End and thus allow to continue using keyboard navigation; added timeout flag to avoid processing scrolling events a fraction of a second after setting up the scrolling events, in order to avoid immediate subsequent requests on IE
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@46060 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
@@ -42,7 +42,7 @@
 .ui-datatable .ui-header-column, .ui-datatable .ui-footer-column { padding:4px 10px; }
 .ui-datatable div.ui-header-column, .ui-datatable div.ui-footer-column { border:none; }
 
-.ui-datatable tbody.ui-datatable-data > tr:focus {
+.ui-datatable tbody.ui-datatable-data:focus, .ui-datatable tbody.ui-datatable-data > tr:focus {
     outline: none;
 }
 
